--- a/CSS/clasePosition/desafio/styles.css
+++ b/CSS/clasePosition/desafio/styles.css
@@ -1,37 +1,29 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-body{
-    font-family: sans-serif;
-}
 
-.parent{
-    height: 100vh;
-    width: 100vw;
-}
-
-.box{
-    width: 500px;
-    height: auto;
-    padding: 35px;
+.container {
     border: 1px solid black;
     border-radius: 20px;
+    width: 600px;
+    height: 300px;
+    margin: 5rem auto;
+    padding: 5rem;
     background: gainsboro;
-    margin: 35px auto;
-}
-
-#titulo{
-    background-color: rgb(221, 175, 248);
-    width: 300px;
-    text-align: center;
     position: relative;
-    top: 78px;
 }
 
-#texto{
-    padding: 70px;
-    background: url(https://images.pexels.com/photos/1939485/pexels-photo-1939485.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1) no-repeat;
-    object-fit: cover;
+.titulo {
+    border: 1px solid black;
+    width: 200px;
+    height: auto;
+    text-align: center;
+    padding: 2rem;
+    background-color: red;
+    border-radius: 20px;
+    position: absolute;
+    top: -40px;
+    left: 208px;
 }
