--- a/CSS/claseDisplay/flex/styles.css
+++ b/CSS/claseDisplay/flex/styles.css
@@ -13,15 +13,17 @@ body{
 }
 
 .container{
+
+
     border: .3rem solid black;
     display: flex;
-    justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
 .box{
-    width: 10rem;
     height: 10rem;
+    flex-basis: 10rem;
+    flex-grow: 1;
 }
 
 .box1{
